--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,24 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Enable testing of Postgres adapter -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.16.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -90,6 +105,13 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- JUnit provider dependency for the Maven Surefire plugin. Needed to run Junit 5 tests from the command
+            line -->
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
             </plugin>
         </plugins>
     </build>
