--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
             <version>4.9.3</version>
         </dependency>
 
+        <!-- TESTING RELATED DEPENDENCIES -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -72,8 +73,15 @@
             <version>1.16.3</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>8.4.4</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
