Creation of resql context via a builder
Create a resql context and supply it exception handler and processor
Refactored processor and translator class names
Updated TODO
Added comments
Cleanups

--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>ressql</id>
+                        <id>resql</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
