--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>4.9.3</version>
         </dependency>
 
+        <!-- In-memory cache https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+
         <!-- TESTING RELATED DEPENDENCIES -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
