--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Run the Maven verify phase
+      run: mvn --batch-mode --update-snapshots verify
